--- a/main.css
+++ b/main.css
@@ -138,7 +138,7 @@ footer {
 
 
     footer {
-        
+        height:100px;
         background-color: rgb(24, 24, 24);
         color: white;
         font-size: 1.4em;
